src/librustdoc/html/static/rustdoc.css
/* ... */
.example-wrap > pre.line-number {
	overflow: initial;
	border: 1px solid;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
	padding: 13px 8px;
	text-align: right;
}

.rustdoc:not(.source) .example-wrap > pre.rust {
	width: 100%;
	overflow-x: auto;
}

.rustdoc:not(.source) .example-wrap > pre {
	margin: 0;
}

#search {
	margin-left: 230px;
	position: relative;
}

#results {
	position: absolute;
	right: 0;
	left: 0;
	overflow: auto;
}

#results > table {
	width: 100%;
	table-layout: fixed;
	margin-bottom: 40px;
}

.content pre.line-numbers {
	float: left;
	border: none;
	position: relative;

	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.line-numbers span {
	cursor: pointer;
}

.docblock-short {
	overflow-wrap: anywhere;
}
.docblock-short p {
	display: inline;
}

.docblock-short p {
	overflow: hidden;
	text-overflow: ellipsis;
	margin: 0;
}

.docblock h1, .docblock h2, .docblock h3, .docblock h4, .docblock h5 {
	border-bottom: 1px solid;
}

#main > .docblock h1 { font-size: 1.3em; }
#main > .docblock h2 { font-size: 1.15em; }
#main > .docblock h3, #main > .docblock h4, #main > .docblock h5 { font-size: 1em; }

#main > h2 + div, #main > h2 + h3, #main > h3 + div {
	display: none; /* Changed to flex or block via js once the page is loaded */
	flex-wrap: wrap;
}

.docblock h1 { font-size: 1em; }
.docblock h2 { font-size: 0.95em; }
.docblock h3, .docblock h4, .docblock h5 { font-size: 0.9em; }

.docblock {
	margin-left: 24px;
	position: relative;
}

.content .out-of-band {
	float: right;
	font-size: 23px;
	margin: 0px;
	padding: 0px;
	font-weight: normal;
}

h3.impl > .out-of-band {
	font-size: 21px;
}

h4.method > .out-of-band {
	font-size: 19px;
}

h4 > code, h3 > code, .invisible > code {
	max-width: calc(100% - 41px);
	display: block;
}

.invisible {
	width: 100%;
	display: inline-block;
}

.content .in-band {
	margin: 0px;
	padding: 0px;
}

.in-band > code {
	display: inline-block;
}

#main {
	position: relative;
}
#main > .since {
	top: inherit;
	font-family: "Fira Sans", sans-serif;
}

.content table:not(.table-display) {
	border-spacing: 0 5px;
}
.content td { vertical-align: top; }
.content td:first-child { padding-right: 20px; }
.content td p:first-child { margin-top: 0; }
.content td h1, .content td h2 { margin-left: 0; font-size: 1.1em; }
.content tr:first-child td { border-top: 0; }

.docblock table {
	margin: .5em 0;
	width: calc(100% - 2px);
	border: 1px dashed;
}

.docblock table td {
	padding: .5em;
	border: 1px dashed;
}

.docblock table th {
	padding: .5em;
	text-align: left;
	border: 1px solid;
}

.fields + table {
	margin-bottom: 1em;
}

.content .item-list {
	list-style-type: none;
	padding: 0;
}

.content .multi-column {
	-moz-column-count: 5;
	-moz-column-gap: 2.5em;
	-webkit-column-count: 5;
	-webkit-column-gap: 2.5em;
	column-count: 5;
	column-gap: 2.5em;
}
.content .multi-column li { width: 100%; display: inline-block; }

.content .method {
	font-size: 1em;
	position: relative;
}
/* Shift "where ..." part of method or fn definition down a line */
.content .method .where,
.content .fn .where,
.content .where.fmt-newline {
	display: block;
	font-size: 0.8em;
}

.content .methods > div:not(.notable-traits) {
	margin-left: 40px;
	margin-bottom: 15px;
}

.content .docblock > .impl-items {
	margin-left: 20px;
	margin-top: -34px;
}
.content .docblock > .impl-items > h4 {
	border-bottom: 0;
}
.content .docblock >.impl-items .table-display {
	margin: 0;
}
.content .docblock >.impl-items table td {
	padding: 0;
}
.toggle-wrapper.marg-left > .collapse-toggle {
	left: -24px;
}
.content .docblock > .impl-items .table-display, .impl-items table td {
	border: none;
}

.content .item-info code {
	font-size: 90%;
}

.content .item-info {
	position: relative;
	margin-left: 33px;
	margin-top: -13px;
}

.sub-variant > div > .item-info {
	margin-top: initial;
}

.content .item-info::before {
	content: '⬑';
	font-size: 25px;
	position: absolute;
	top: -6px;
	left: -19px;
}

.content .impl-items .method, .content .impl-items > .type, .impl-items > .associatedconstant {
	margin-left: 20px;
}

.content .impl-items .docblock, .content .impl-items .item-info {
	margin-bottom: .6em;
}

.content .impl-items > .item-info {
	margin-left: 40px;
}

.methods > .item-info, .content .impl-items > .item-info {
	margin-top: -8px;
}

.impl-items {
	flex-basis: 100%;
}

#main > .item-info {
	margin-top: 0;
}

nav:not(.sidebar) {
	border-bottom: 1px solid;
	padding-bottom: 10px;
	margin-bottom: 10px;
}
nav.main {
	padding: 20px 0;
	text-align: center;
}
nav.main .current {
	border-top: 1px solid;
	border-bottom: 1px solid;
}
nav.main .separator {
	border: 1px solid;
	display: inline-block;
	height: 23px;
	margin: 0 20px;
}
nav.sum { text-align: right; }
nav.sub form { display: inline; }

nav.sub, .content {
	margin-left: 230px;
}

a {
	text-decoration: none;
	background: transparent;
}

.small-section-header:hover > .anchor {
	display: initial;
}

.in-band:hover > .anchor, .impl:hover > .anchor {
	display: inline-block;
	position: absolute;
}
.anchor {
	display: none;
	position: absolute;
	left: -7px;
}
.anchor.field {
	left: -5px;
}
.small-section-header > .anchor {
	left: -28px;
	padding-right: 10px; /* avoid gap that causes hover to disappear */
}
.anchor:before {
	content: '\2002\00a7\2002';
}

.docblock a:not(.srclink):not(.test-arrow):hover,
.docblock-short a:not(.srclink):not(.test-arrow):hover, .item-info a {
	text-decoration: underline;
}

.invisible > .srclink, h4 > code + .srclink, h3 > code + .srclink {
	position: absolute;
	top: 0;
	right: 0;
	font-size: 17px;
	font-weight: normal;
}

.block a.current.crate { font-weight: 500; }

.search-container {
	position: relative;
}
.search-container > div {
	display: inline-flex;
	width: calc(100% - 63px);
}
/* ... */

